# cargo-duckdb-ext-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md
src/: builder.rs  error.rs  fs.rs  logger.rs  main.rs  packer.rs  task.rs
